MDEV-28130 MariaDB SEGV issue at tree_search_next