storage/heap/hp_rprev.c
@@ -68,6 +68,7 @@ int heap_rprev(HP_INFO *info, uchar *record)
     }
     else
     {
+      info->last_pos= NULL;
       my_errno = HA_ERR_KEY_NOT_FOUND;
     }
   }
